tests/ui/parser/misspelled-keywords/pub-const-fn.rs
pub cnst fn code() {}
//~^ ERROR visibility `pub` is not followed by an item
//~| ERROR expected item, found `cnst`

fn main() {}
